# ejemplos-curso-ML

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
datos/: Activa.csv  Activa_columna.csv  datosAireGijon2013.csv  datosConsumos.csv  motor_dc.csv  motor_dc_descripcion.txt  motorcc.mdl  params.m
introducción ML/: Identificación de sistema lineal (LTI).html  Identificación de sistema lineal (LTI).ipynb  Identificación motor DC derivadas.html  Identificación motor DC derivadas.ipynb  Modelado AR (estimación de espectro AR y residuos).html  Modelado AR (estimación de espectro AR y residuos).ipynb  Reducción de la dimensionalidad (datos de motor de laminacion).ipynb  Regresión de modelos no lineales.html  Regresión multivariable.html  Regresión multivariable.ipynb  Regresión polinómica.html  Regresión-1D.html  Regresión-1D.ipynb  dataicann excar + pca + tsne.html  dataicann excar + pca + tsne.ipynb
introducción ML/Análisis y filtrado de señal/: 01_ejemplo_efecto_gibbs_filtros_fir.ipynb  02_ejemplo_diseño_filtro_fir.ipynb  03_demo_analisis_frecuencial_vibraciones_y_diseño_fir_pasabajos.ipynb  03_demo_analisis_frecuencial_vibraciones_y_diseño_fir_pasabanda.ipynb  exporta_todos.sh
introducción ML/Clasificación/: 01_ejemplo_regresion_logistica_basico.ipynb  02_ejemplo_regresion_logistica_iris.ipynb  03_ejemplo_regresion_logistica_mnist.ipynb  04_ejemplo_naive_bayes.ipynb  05_demo_clasificacion_svm_motor_induccion.ipynb  06_demo_clasificacion_cnn_motor_laminacion.ipynb  07_demo_clasificacion_arboles.ipynb  08_tutorial_anomaly_detection.ipynb  (+10 more)
(+108 files in other folders)
