[project]
name = "curso-ml"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.11",
]
