[project]
name = "ejemplos-curso-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "umap-learn>=0.5.11",
]
